feat: add skills

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Aniket's portfolio</h1>
     <p>I am a web developer.</p>
+    <p>I am familiar with HTML, CSS, JavaScript, Node.js and React.js</p>
 </body>
 </html>
