Add projects desc

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Aniket's portfolio</h1>
     <p>I am a web developer.</p>
     <p>I am familiar with HTML, CSS, JavaScript, Node.js and React.js</p>
+    <p>I have made few projects as a proof of work.</p>
 </body>
 </html>
